[gd_scene load_steps=9 format=3 uid="uid://cvot3xltw5qrw"]

[ext_resource type="PackedScene" uid="uid://bw4ukbxrdiuud" path="res://assets/key/Key.fbx" id="1_i66h1"]
[ext_resource type="Script" uid="uid://c1nb0y7ucaqw1" path="res://scenes/breakable_barrel/key.gd" id="1_odaoo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i66h1"]
size = Vector3(0.244141, 0.5354, 0.0537109)

[sub_resource type="Animation" id="Animation_odaoo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_msp5j"]
resource_name = "collected"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.0556283, 0), Vector3(0, 0.104726, 0), Vector3(0, 0.0626854, 0), Vector3(0, 0.0232072, 0), Vector3(0, 0.0743642, 0)]
}

[sub_resource type="Animation" id="Animation_i66h1"]
resource_name = "spin"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0976743, 0.197674, 0.3, 0.4, 0.5, 0.609303, 0.709303, 0.809303, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.5708), Vector3(0, 0.628319, -1.5708), Vector3(0, 1.25664, -1.5708), Vector3(0, 1.88496, -1.5708), Vector3(0, 2.51327, -1.5708), Vector3(0, 3.14159, -1.5708), Vector3(0, 3.76991, -1.5708), Vector3(0, 4.39823, -1.5708), Vector3(0, 5.02655, -1.5708), Vector3(0, 5.65487, -1.5708), Vector3(0, 6.28319, -1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odaoo"]
_data = {
&"RESET": SubResource("Animation_odaoo"),
&"collected": SubResource("Animation_msp5j"),
&"spin": SubResource("Animation_i66h1")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_odaoo"]
size = Vector3(2.68945, 0.001, 3.08179)

[node name="Key" type="Area3D"]
script = ExtResource("1_odaoo")

[node name="Key" parent="." instance=ExtResource("1_i66h1")]
transform = Transform3D(-3.61999e-06, 1, 0, -1, -3.61999e-06, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.141724, 0)
shape = SubResource("BoxShape3D_i66h1")

[node name="key_animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_odaoo")
}

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_odaoo")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.309804, 0.439216, 0.431373, 1)
light_energy = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="key_animation_player" to="." method="_on_key_animation_player_animation_finished"]
